--- a/capstone-project/src/App.css
+++ b/capstone-project/src/App.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+/* font-family: 'Raleway', sans-serif; */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .reports,
@@ -26,5 +26,17 @@
 
 input {
   width: 30vw;
+}
+
+/* h1 {
+  text-align: center;
+  padding: 20px;
+  background-color: #060b26;
+  color: white;
+} */
+
+body {
+  background-image: url("https://media.istockphoto.com/id/490747664/photo/gray-doggy-tile-pattern-repeat-background.jpg?b=1&s=170667a&w=0&k=20&c=H6SZuhK9oigNGww8qa60fSHoODDpiPQe-916-Pc7FeE=");
+  height: 100%;
 }
 
