--- a/capstone-project/src/pages/Feeding.css
+++ b/capstone-project/src/pages/Feeding.css
@@ -1,3 +1,26 @@
-.feeding {
-    text-align: center;
+.addFeeding {
+  flex-direction: column;
+  width: 85%;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background: white;
+  border-radius: 10px;
+  border: 1px solid #7a8796;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+
+.feedingHistory {
+  margin-top: 50px;
+  flex-direction: column;
+  /* padding: 1rem; */
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+  background: white;
+  border-radius: 10px;
+  border: 1px solid #7a8796;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
