--- a/capstone-project/src/pages/pages.css
+++ b/capstone-project/src/pages/pages.css
@@ -25,7 +25,7 @@ button {
   text-align: left;
 }
 
-.users{
+.users {
   flex-direction: row;
 }
 
@@ -49,7 +49,7 @@ form * {
 }
 
 button {
-  background-color: #04AA6D;
+  background-color: #2b3e52;
   border: 0;
   color: white;
   padding: 5px;
@@ -60,7 +60,7 @@ h3 {
 }
 
 h1 {
-  background-color: #c97757;
+  background-color: #d8b09f;
   opacity: 0.7;
   text-align: center;
 }
@@ -75,25 +75,24 @@ li {
 }
 
 @media (max-width: 500px) {
-.login,
-.home,
-.walks,
-.feeding,
-.information {
-  flex-direction: column;
-  width: 250px;
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  background: white;
-  border-radius: 10px;
-  border: 1px solid #7a8796;
-  padding: 10px;
-  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-}
+  .login,
+  .home,
+  .walks,
+  .feeding,
+  .information {
+    flex-direction: column;
+    width: 250px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    background: white;
+    border-radius: 10px;
+    border: 1px solid #7a8796;
+    padding: 10px;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  }
 
-img {
-  width: 150px;
-  
-}
+  img {
+    width: 150px;
+  }
 }
