--- a/capstone-project/src/components/Header.css
+++ b/capstone-project/src/components/Header.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap");
 
+.header {
+  width: 100%;
+}
 
 .logo {
   height: 100px;
