--- a/capstone-project/src/components/side-navbar.css
+++ b/capstone-project/src/components/side-navbar.css
@@ -2,7 +2,7 @@
   background-color: #060b26;
   height: 80px;
   display: flex;
-  justify-content: start;
+  justify-content: left;
   align-items: center;
 }
 
