--- a/capstone-project/src/pages/pages.css
+++ b/capstone-project/src/pages/pages.css
@@ -18,11 +18,27 @@ label,
 select,
 button {
   margin: 5px;
-  width: auto;
+  
 }
 .walk-card,
 .feed-card {
   text-align: left;
+}
+
+.add{
+  display: flex;
+  text-align: center;
+  min-width: 100px;
+}
+
+.field {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  height: 60px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .users {
