--- a/capstone-project/src/pages/pages.css
+++ b/capstone-project/src/pages/pages.css
@@ -1,4 +1,4 @@
-.login,
+/* .login,
 .home,
 .walks,
 .feeding,
@@ -13,18 +13,45 @@
   border: 1px solid #7a8796;
   padding: 10px;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-}
-label,
-select,
-button {
-  margin: 5px;
-  width: auto;
-}
-.walk-card,
-.feed-card {
-  text-align: left;
+} */
+
+.dogs,
+.addDogUser,
+.users {
+  border-collapse: collapse;
+  margin: auto;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  width: 85%;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid #7a8796;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
+/* .addButton {
+  width: 400px;
+  padding-top: 2px;
+} */
+
+.dogs {
+  background-color: #f8e6de;
+  border: 1px solid black;
+  text-align: center;
+}
+
+td,
+th {
+  padding: 12px 15px;
+}
+
+.dogData {
+  margin: 10px;
+}
+
+.inputPadding {
+  padding: 10px;
+}
 .users {
   flex-direction: row;
 }
@@ -32,7 +59,7 @@ button {
 .user-card {
   display: flex;
   align-items: center;
-  width: 150px
+  width: 150px;
 }
 
 form {
@@ -60,6 +87,9 @@ button {
   color: white;
   padding: 5px;
 }
+button:hover {
+  background-color: #c97757;
+}
 
 h3 {
   flex-direction: column;
@@ -82,24 +112,22 @@ li {
 }
 
 @media (max-width: 500px) {
-
-.login,
-.home,
-.walks,
-.feeding,
-.information {
-  flex-direction: column;
-  width: 280px;
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  background: white;
-  border-radius: 10px;
-  border: 1px solid #7a8796;
-  padding: 10px;
-  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-}
-
+  .login,
+  .home,
+  .walks,
+  .feeding,
+  .information {
+    flex-direction: column;
+    width: 280px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    background: white;
+    border-radius: 10px;
+    border: 1px solid #7a8796;
+    padding: 10px;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  }
 
   img {
     width: 150px;
