--- a/capstone-project/src/pages/pages.css
+++ b/capstone-project/src/pages/pages.css
@@ -25,10 +25,14 @@ button {
   text-align: left;
 }
 
-.add{
+.add {
   display: flex;
   text-align: center;
-  min-width: 100px;
+  min-width: 90px;
+}
+
+.white {
+  background-color: white;
 }
 
 .field {
