--- a/capstone-project/src/pages/pages.css
+++ b/capstone-project/src/pages/pages.css
@@ -29,10 +29,9 @@
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
-/* .addButton {
-  width: 400px;
-  padding-top: 2px;
-} */
+.addButton {
+  margin-top: 5px;
+}
 
 .dogs {
   background-color: #f8e6de;
@@ -63,6 +62,7 @@ th {
 
 .inputPadding {
   padding: 10px;
+  text-align: center;
 }
 
 .users {
