--- a/capstone-project/src/pages/medical/medical.css
+++ b/capstone-project/src/pages/medical/medical.css
@@ -6,10 +6,11 @@
   padding: 10px;
   margin-bottom: 20px;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  justify-content: center;
 }
 
 .notesButtons {
-  text-align: right;
+  text-align: center;
 }
 
 .noteItem {
@@ -36,5 +37,5 @@
 
 .noteItemPadding {
   padding: 10px;
-  border: 1px solid grey;
+  
 }
